--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
         </h2>
   
         <p class="hidden text-gray-500 md:mt-4 md:block">
-          Maggot adalah larva lalat yang dijual untuk membantu mengubah sampah organik menjadi pupuk organik berkualitas tinggi
+          Maggot, dikembangkan oleh tim EcoGrubs, merupakan solusi inovatif dalam pengelolaan sampah organik menjadi pupuk organik berkualitas tinggi. 
+            Dengan menggunakan larva lalat yang dipilih secara khusus, Maggot efektif dalam mengubah sampah organik menjadi pupuk yang kaya akan nutrisi alami yang esensial bagi tanaman. 
+            Selain itu, produk ini membantu meningkatkan struktur dan kesuburan tanah secara alami. Dengan memanfaatkan bahan alami dan mengurangi limbah organik, 
+            Maggot mendukung praktik pertanian yang berkelanjutan dan ramah lingkungan.
         </p>
   
         <div class="mt-4 md:mt-8">
