--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <a href="https://www.instagram.com/fariqhada/" class="group relative block bg-black h-full">
           <img
             alt="Fariq Akmal Hada"
-            src="1 Fariq Akmal Hada.svg"
+            src="1 Fariq Akmal Hada.PNG"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -350,7 +350,7 @@
         <a href="https://www.instagram.com/goks00/" class="group relative block bg-black h-full">
           <img
             alt="M Nabiel Almayza"
-            src="2 M Nabiel Almayza.svg"
+            src="2 M Nabiel Almayza.PNG"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -374,7 +374,7 @@
         <a href="https://www.instagram.com/Ariefnoer42/" class="group relative block bg-black h-full">
           <img
             alt="Arief Noer Rahman"
-            src="3 Arief Noer Rahman.svg"
+            src="3 Arief Noer Rahman.PNG"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -397,7 +397,7 @@
         <a href="https://www.instagram.com/_dhoahmad/" class="group relative block bg-black h-full">
           <img
             alt="Ahmad Ridho"
-            src="4 Ahmad Ridho.svg"
+            src="4 Ahmad Ridho.PNG"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -424,7 +424,7 @@
         <footer class="bg-white lg:grid lg:grid-cols-5">
             <div class="relative block h-32 lg:col-span-2 lg:h-full">
               <img
-                src="footer.svg"
+                src="footer.PNG"
                 alt=""
                 class="absolute inset-0 h-full w-full object-cover"
               />
