--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   
     <img
       alt="Maggot"
-      src="Maggot.png"
+      src="Maggot.PNG"
       class="h-56 w-full object-cover sm:h-full"
     />
   </section>
