--- a/index.html
+++ b/index.html
@@ -124,7 +124,13 @@
     />
   </section>
     <!-- END PRODUCT KNOWLEDGE -->
-
+    <!-- DEVIDER PRODUCT  -->
+    <div id="the team" class="container mx-auto py-12">
+      <!-- Divider with H1 -->
+      <div class="text-center mb-8">
+        <h1 class="text-3xl font-bold text-gray-800">Harga</h1>
+        <div class="border-t-4 border-green w-24 mx-auto mt-2"></div>
+      </div>
     <!-- PRICING PRODUCT-->
     <div id="harga" class="mx-auto max-w-3xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8">
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:items-center md:gap-8">
