--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
         </div>
       </section>
     <!-- END BANNER -->
-
+    <!-- DEVIDER PRODUCT  -->
+<div id="the team" class="container mx-auto py-12">
+  <!-- Divider with H1 -->
+  <div class="text-center mb-8">
+    <h1 class="text-3xl font-bold text-gray-800">Harga</h1>
+    <div class="border-t-4 border-green w-24 mx-auto mt-2"></div>
+  </div>
     <!-- PRODUCT KNOWLEDGE -->
 <section id="maggot" class="overflow-hidden bg-gray-50 sm:grid sm:grid-cols-2">
     <div class="p-8 md:p-12 lg:px-16 lg:py-24">
@@ -124,13 +130,7 @@
     />
   </section>
     <!-- END PRODUCT KNOWLEDGE -->
-    <!-- DEVIDER PRODUCT  -->
-    <div id="the team" class="container mx-auto py-12">
-      <!-- Divider with H1 -->
-      <div class="text-center mb-8">
-        <h1 class="text-3xl font-bold text-gray-800">Harga</h1>
-        <div class="border-t-4 border-green w-24 mx-auto mt-2"></div>
-      </div>
+
     <!-- PRICING PRODUCT-->
     <div id="harga" class="mx-auto max-w-3xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8">
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:items-center md:gap-8">
@@ -335,7 +335,7 @@
         <a href="https://www.instagram.com/fariqhada/" class="group relative block bg-black h-full">
           <img
             alt="Fariq Akmal Hada"
-            src="1 Fariq Akmal Hada.png"
+            src="1-Fariq-Akmal-Hada.webp"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -358,7 +358,7 @@
         <a href="https://www.instagram.com/goks00/" class="group relative block bg-black h-full">
           <img
             alt="M Nabiel Almayza"
-            src="2 M Nabiel Almayza.png"
+            src="2-M-Nabiel-Almayza.webp"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -382,7 +382,7 @@
         <a href="https://www.instagram.com/Ariefnoer42/" class="group relative block bg-black h-full">
           <img
             alt="Arief Noer Rahman"
-            src="3 Arief Noer Rahman.png"
+            src="3-Arief-Noer-Rahman.webp"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -405,7 +405,7 @@
         <a href="https://www.instagram.com/_dhoahmad/" class="group relative block bg-black h-full">
           <img
             alt="Ahmad Ridho"
-            src="4 Ahmad Ridho.png"
+            src="4-Ahmad-Ridho.webp"
             class="absolute inset-0 h-full w-full object-cover opacity-75 transition-opacity group-hover:opacity-50"
           />
           <div class="relative p-4 sm:p-6 lg:p-8 h-full flex flex-col justify-between">
@@ -461,7 +461,7 @@
         <footer class="bg-white lg:grid lg:grid-cols-5">
             <div id="kontak kami" class="relative block h-32 lg:col-span-2 lg:h-full">
               <img
-                src="footer.png"
+                src="footer.webp"
                 alt=""
                 class="absolute inset-0 h-full w-full object-cover"
               />
